<resources>
    <string name="app_name">ZigBeeTestbed</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <!-- Strings related to Main Menu -->
    <string name="action_display">Sensor Information</string>
    <string name="action_send_message">Send Message</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <!-- Strings related to Send Message Menu -->
    <string name="action_on">Turn On</string>
    <string name="action_off">Turn Off</string>
    <string name="title_activity_send_menu">Light bulb Interaction</string>
    <!-- Strings related to Display Menu -->
    <string name="action_temp">Temperature</string>
    <string name="action_door">Door Lock</string>
    <string name="action_sound">Sound</string>
    <string name="action_motion">Trash Can</string>
    <string name="action_temp_pi">DHT22</string>
    <string name="action_tbd_sensor">TBD</string>
    <string name="title_display_menu">Sensors Available</string>
    <!-- Strings related to Temperature Arduino -->
    <string name="title_temp_arduino">Arduino\'s Temperature Sensor Information</string>
    <string name="action_set_temp">Set Temperature</string>
    <string name="set_temp">Set Temp: \n\n %1$s F</string>
    <string name="hint_up_temp">Hotter</string>
    <string name="hint_down_temp">Colder</string>
    <!-- Strings related to Sound Sensor -->
    <string name="title_sound">Sound Detector Information</string>
    <!-- Strings related to Motion Sensor -->
    <string name="title_motion">Trash Can Information</string>
    <string name="subtitle_trash">Trash Can Fullness</string>
    <!-- Strings related to Temperature Pi -->
    <string name="title_temp_pi">Pi\'s Temperature Sensor Information</string>
    <!-- Strings related to Doorlock -->
    <string name="title_accel">Door Lock information</string>
    <string name="pin_one">1</string>
    <string name="pin_two">2</string>
    <string name="pin_three">3</string>
    <string name="pin_four">4</string>
    <string name="pin_five">5</string>
    <string name="pin_six">6</string>
    <string name="pin_seven">7</string>
    <string name="pin_eight">8</string>
    <string name="pin_nine">9</string>
    <string name="pin_zero">0</string>
    <string name="pin_clear">Clear</string>
    <string name="pin_enter">Enter</string>
    <string name="button_lock">Denotes the state of the Lock</string>
</resources>
